Added cx:ebnf-convert, updated cx:railroad
Supports Gunther Rademacher’s EBNF converter directly in cx:ebnf-convert and
indirectly in the cx:railroad step. This will make it easier to draw railroad
diagrams of, for example, Invisible XML grammars.

Fix #301

--- a/documentation/src/resources/css/xmlcalabash.css
+++ b/documentation/src/resources/css/xmlcalabash.css
@@ -131,10 +131,16 @@ code.literal {
     background-color: var(--secondary-color);
  }
 
+.pipeline-error code,
 p.element-syntax code {
     font-size: inherit;
     border: none;
     background-color: inherit;
+}
+
+.pipeline-error code {
+    padding: 0;
+    border-radius: none;
 }
 
 /* ============================================================ */
