Added a colophon to the userguide

--- a/documentation/src/resources/css/xmlcalabash.css
+++ b/documentation/src/resources/css/xmlcalabash.css
@@ -225,3 +225,9 @@ main {
 .fgbody .figure header .title {
     background-color: white;
 }
+
+.colophon {
+  border: inherit;
+  margin: inherit;
+  padding: inherit;
+}
